refactor(catalog): 重构为流式下载架构，移除临时文件落盘
将 MeSH/Venue/Serfile 导入从「下载临时文件后解析」改为「流式下载直接解析」。
HTTP 响应体直接传递给 Parser，无磁盘 I/O，简化资源管理。

**Breaking Change**：
- 删除 FileDownloadPort/FileDownloadAdapter
- 删除 MeshSourceFilePort/MeshSourceFileAdapter
- Parser Port 接口从 Path 改为 InputStream
- MeshImportParams/VenueImportParams 从临时文件路径改为 URL

**新增**：
- StreamingDownloadPort/StreamingDownloadResult（Domain 层）
- StreamingDownloadAdapter（Infra 层，使用 longRunningRestClient）
- StreamingDownloadAdapterIT（11 个测试用例）
- ADR-012 架构决策记录

**修改**：
- ItemReader 改为在 open() 时建立 HTTP 连接
- Orchestrator 移除临时文件清理逻辑
- 修复 NumberFormat 线程安全问题（方法级别创建）
- 更新 README.md 变更日志（v0.9.0）

Refs: ADR-012